<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:iconTint="@color/black"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:iconTint="@color/black"
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_pin_24"
        android:title="@string/mapa"/>
    <item
        android:iconTint="@color/black"
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/categorias"/>

    <item
        android:iconTint="@color/black"
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/logout"/>

</menu>